feat: client UI WIP

--- a/client/index.html
+++ b/client/index.html
@@ -9,15 +9,20 @@
 <body>
   <div id="message">
     <h1>Washing Machine Control</h1>
-    <h2 id="description">Loading...</h2>
+    <h2 id="description">Washing...</h2>
   </div>
   <div>
-    <div id="loading">
-      <img src="./assets/loading.jpg" alt="">
+    <div id="washing-progress">
+      <img src="./assets/washing.jpg" alt="">
     </div>
-    <div id="error">
-     <img src="./assets/disconnected.jpg" alt="">
+    <div id="washing-done">
+     <img src="./assets/laundry.jpg" alt="">
     </div>
+  </div>
+  <div>
+    <button id="register-notifications">
+      Notify me when it's done
+    </button>
   </div>
 </body>
 <script src="./main.js"></script>
