--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <title></title>
-<link rel="stylesheet" href="./styles.css">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="manifest" href="./assets/site.webmanifest">
+<link rel="stylesheet" href="./styles.css">
 </head>
 <body>
   <div id="message">
