--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="manifest" href="./assets/site.webmanifest">
 <link rel="stylesheet" href="./styles.css">
+<meta name="robots" content="noindex">
 </head>
 <body>
   <div id="message">
