feat: basic api structure

--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
          <img src="./assets/laundry.jpg" alt="">
         </div> -->
       </div>
-      <button id="register-notifications">
+      <button id="subscribe-notifications">
         Notify me when it's done
       </button>
     </div>
