feat: add gpio wrapper, led blinking, other improvements

--- a/client/index.html
+++ b/client/index.html
@@ -25,9 +25,9 @@
         <div id="washing-progress">
           <img src="./assets/washing.jpg" alt="">
         </div>
-        <!-- <div id="washing-done">
+        <div id="washing-done">
          <img src="./assets/laundry.jpg" alt="">
-        </div> -->
+        </div>
       </div>
       <button id="subscribe-notifications">
         Notify me when it's done
